FIX scrollbar CSS

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,12 +26,16 @@ button:active {
     box-shadow: -1px -1px 3px inset rgb(92, 92, 92), inset 1px 1px 3px rgb(12, 12, 12);
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
 ::-webkit-scrollbar-thumb {
-    background-color: #040303;
+    background-color: #757575;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #616161;
+    background-color: #252525;
 }
 
 .pop-out {
